@@ -23,8 +23,8 @@
 Stencil
 parenthesize (Grob*me, Stencil m)
 {
-  Stencil open = Font_interface::get_default_font (me)->find_by_name (String ("accidentals-leftparen"));
-  Stencil close = Font_interface::get_default_font (me)->find_by_name (String ("accidentals-rightparen"));
+  Stencil open = Font_interface::get_default_font (me)->find_by_name ("accidentals.leftparen");
+  Stencil close = Font_interface::get_default_font (me)->find_by_name ("accidentals.rightparen");
 
   m.add_at_edge (X_AXIS, LEFT, Stencil (open), 0,0);
   m.add_at_edge (X_AXIS, RIGHT, Stencil (close), 0,0);
@@ -214,7 +214,7 @@ Accidental_interface::print (SCM smob)
     {
       int alteration = scm_to_int (scm_car (s));
       String font_char = get_fontcharname (style, alteration);
-      Stencil acc (fm->find_by_name ("accidentals-" + font_char));
+      Stencil acc (fm->find_by_name ("accidentals." + font_char));
 
       if (acc.is_empty ())
 	{
