@@ -35,6 +35,7 @@ Font_metric::coding_scheme () const
 Stencil
 Font_metric::find_by_name (String s) const
 {
+  s = s.substituted ('-', "M"); 
   int idx = name_to_index (s);
   Box b;
   
