@@ -44,7 +44,7 @@ Percent_repeat_item_interface::x_percent (Grob *me, int count,
     {
       m.add_at_edge (X_AXIS, RIGHT, s, -slash_neg_kern,0);
     }
-  Stencil d1 = Font_interface::get_default_font (me)->find_by_name ("dots-dot");
+  Stencil d1 = Font_interface::get_default_font (me)->find_by_name ("dots.dot");
   Stencil d2  =  d1;
   d1.translate_axis (0.5, Y_AXIS );
   d2.translate_axis (-0.5, Y_AXIS);
