@@ -30,7 +30,7 @@ Script_interface::get_stencil (Grob *me, Direction d)
       SCM str = ((scm_is_pair (name_entry)) ? index_get_cell (name_entry, d)
 		 : name_entry);
       return Font_interface::get_default_font (me)
-	->find_by_name ("scripts-" + ly_scm2string (str));
+	->find_by_name ("scripts." + ly_scm2string (str));
     }
   else if (key == ly_symbol2scm ("accordion"))
     return Lookup::accordion (scm_cdr (s), 1.0,
